# ScaraRobotROS

./: .gitignore  README.md
src/scara_robot/: CMakeLists.txt  package.xml
src/scara_robot/include/scara_robot/: inverse_kinematics_node.hpp  robot_dimensions.hpp
src/scara_robot/src/: inverse_kinematics_node.cpp
src/scara_robot_bringup/: CMakeLists.txt  package.xml
src/scara_robot_bringup/launch/: scara.launch.xml
src/scara_robot_bringup/rviz/: config.rviz
src/scara_robot_description/: CMakeLists.txt  package.xml
src/scara_robot_description/launch/: display.launch.py  display.launch.xml
src/scara_robot_description/urdf/: gazebo_specifics.xacro  materials.xacro  scara.urdf.xacro  scara_2.urdf.xacro  scara_structure.xacro
src/scara_robot_websocket/: package.xml  setup.cfg  setup.py
src/scara_robot_websocket/scara_robot_websocket/: ws_server_node.py
